Move the ./src/ into a subdirectory under /opt/.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,6 +39,8 @@ services:
       - flink-cluster
     depends_on:
       - zookeeper
+    volumes:
+      - ./src/:/opt/src/
     profiles: ["cluster"]
   taskmanager:
     hostname: taskmanager
